# ChangeLog for app-shells/fish
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/fish/ChangeLog,v 1.39 2009/10/23 15:40:54 vostorga Exp $

  23 Oct 2009; Víctor Ostorga <vostorga@gentoo.org> fish-1.23.0.ebuild:
  Adding die to emake install

  10 Feb 2009; Christian Faulhammer <fauli@gentoo.org> -fish-1.21.8.ebuild,
  -fish-1.21.12.ebuild, -fish-1.22.1.ebuild, -fish-1.22.2.ebuild,
  -fish-1.22.3.ebuild:
  clean up

  09 Feb 2009; Markus Meier <maekke@gentoo.org> fish-1.23.0.ebuild:
  amd64/x86 stable, bug #258260

  31 Jan 2009; Donnie Berkholz <dberkholz@gentoo.org>; metadata.xml:
  Give up maintainership; reassign to maintainer-needed.

  15 Jun 2008; Peter Alfredsen <loki_val@gentoo.org>
  +files/fish-1.23.0-glibc-2.8.patch, fish-1.23.0.ebuild:
  Fix 227281, glibc-2.8 compatibility.

*fish-1.23.0 (13 Jan 2008)

  13 Jan 2008; Donnie Berkholz <dberkholz@gentoo.org>; +fish-1.23.0.ebuild:
  Bump. Changes: case-insensitive tab completions; enhancements to the
  multiline editing system; new, more powerful keybinding system.

  25 Jun 2007; Donnie Berkholz <dberkholz@gentoo.org>; fish-1.22.3.ebuild:
  (#172586) Remove unused doc USE flag (James Rowe).

*fish-1.22.3 (21 Jun 2007)

  21 Jun 2007; Donnie Berkholz <dberkholz@gentoo.org>; +fish-1.22.3.ebuild:
  (#167281) Bump to latest. The doxygen dep is mandatory.

  04 Feb 2007; Steve Dibb <beandog@gentoo.org> fish-1.22.1.ebuild:
  amd64 stable, bug 151899

  24 Jan 2007; Marius Mauch <genone@gentoo.org> fish-1.21.8.ebuild,
  fish-1.21.12.ebuild, fish-1.22.1.ebuild, fish-1.22.2.ebuild:
  Replacing einfo with elog

  20 Jan 2007; nixnut <nixnut@gentoo.org> fish-1.22.2.ebuild:
  Stable on ppc wrt bug 151899

  18 Jan 2007; Christian Faulhammer <opfer@gentoo.org> fish-1.22.1.ebuild:
  stable x86, bug #151899

*fish-1.22.2 (18 Jan 2007)

  18 Jan 2007; Donnie Berkholz <dberkholz@gentoo.org>; +fish-1.22.2.ebuild: