@@ -3,6 +3,6 @@ AUX fish-1.22.3-iconv.patch 731 RMD160 1b82d578cc9ad070cf16ddcfc2dac35e8c909c93 
 AUX fish-1.23.0-gentoo-alt.patch 1792 RMD160 a550c39db0df1c3b4acdb3cb94cf0123b5e210ed SHA1 eb7d94b6133c3a4464cba5ce58f223c5ba78904d SHA256 f886ae1130048c86d2d93fcc158cf4725dabf15a88d730633ca62660a30a26db
 AUX fish-1.23.0-glibc-2.8.patch 545 RMD160 eba94b5952a95e4791776f0c873efa0930c3d453 SHA1 cd114eda6d8c9cf89f22c33cc7674260fa93068b SHA256 ea903595943729e82203d745982a00c46cbca45aa0d2ee53e09ca6f5c0bf22be
 DIST fish-1.23.0.tar.bz2 823193 RMD160 0c68e10552e843e8aec920175433ed252da2f040 SHA1 8f2c4ca6b760dde5d4c4f8d745c97ce9e283879f SHA256 ddd86de46d6736cb387ff8ab1aeffa679a93a5ebdab0ba679e3f7c2cac77d871
-EBUILD fish-1.23.0.ebuild 1669 RMD160 b4e5cb39272395624b32a2e6e5b50f9bef0c37e4 SHA1 2b45f4d0893433d7acf28ade05c5b436635dee5b SHA256 8c6949e3322f92560ee7e1f842e390435d2563182757d4d7c414c829f4a570e7
-MISC ChangeLog 7535 RMD160 ee547176fc0aa876ad2b9a44e8080d38ed588256 SHA1 a2fa047d2dc119d2e62701ee2113355b272bfbcc SHA256 eb65d552fbe409bc42ebb82b75c34cafb394f31ba592dd52b3d1ec34ec5ef1eb
+EBUILD fish-1.23.0.ebuild 1652 RMD160 23175e996bacc43705c927f39d4a4225ba42a4d7 SHA1 9636537a0bc67542f5aa188b37a4e55f7a4724b1 SHA256 9e44dd08a8a06097f23f7abbe41483ce02aeedf8c9d6685b04ec1048b14ead66
+MISC ChangeLog 7648 RMD160 3d7aa4bf011514b0f6b9e26d47182b4ee6f8a331 SHA1 1a0aac0a2035aebf6c63dfdaf597c25f6a740f7f SHA256 0d23c102a311d70ae862b0601e8b8c744868477a7728b3f9d4825c37514dc77a
 MISC metadata.xml 290 RMD160 b9b86283c09349c8827faef7d3ef5f724a248e77 SHA1 ae1c8e62d75c94ff50b8a5391afb6008460963aa SHA256 380e26e9262298b9cb31e863a9ab641f6fbdc8c50bda2cf2e47fd399f9cb5e85
